# kicadMCP_plugin

./: .gitignore  product.md  pyproject.toml  ruff.toml  tech_stack.md  workflow.md
conductor/: product-guidelines.md  product.md  tech-stack.md  tracks.md
conductor/archive/placement_pipeline_20260629/: index.md  metadata.json  spec.md
conductor/tracks/cicd_pipeline_20260629/: index.md  metadata.json  plan.md  spec.md
conductor/tracks/component_registry_20260629/: index.md  metadata.json  plan.md  spec.md
conductor/tracks/drc_validation_20260629/: index.md  metadata.json  plan.md  spec.md
conductor/tracks/json_matrix_schema_20260629/: index.md  metadata.json  plan.md  spec.md
conductor/tracks/placement_pipeline_20260629/: plan.md  walkthrough.md
conductor/tracks/routing_pipeline_20260629/: index.md  metadata.json  plan.md  (+1 more)
kbd_engine/: __init__.py  drc.py  exceptions.py  ipc2152.py  kle_parser.py  mcp_server.py  models.py  net_classes.py  pcbnew_adapter.py  placer.py  registry.py  router.py  routing_models.py  via_inserter.py
kbd_engine/data/: default_net_classes.json  default_registry.json
kbd_engine/routers/: __init__.py  freerouting.py  quilter.py  rust_astar.py
kbd_router/: Cargo.toml  pyproject.toml
kbd_router/src/: astar.rs  lib.rs  python.rs
kbd_router/tests/: cli_tests.rs  server_tests.rs
tests/: conftest.py  mock_pcbnew.py  test_drc.py  test_e2e.py  test_exceptions.py  test_freerouting.py  test_ipc2152.py  test_kle_parser.py  test_mcp_server.py  test_models.py  test_net_classes.py  test_pcbnew_adapter.py  test_placer.py  test_placer_integration.py  test_quilter.py  test_registry.py  test_router.py  test_routing_models.py  test_rust_astar_router.py  test_rust_router.py  test_via_inserter.py
(+12 files in other folders)
