[package]
name = "kbd_router"
version = "0.1.0"
edition = "2024"

[lib]
name = "kbd_router"
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
pyo3 = { version = "0.23", features = ["extension-module"], optional = true }

[features]
default = []
python = ["dep:pyo3"]
