[package]
name = "kbd_router"
version = "0.1.0"
edition = "2024"

[lib]
name = "kbd_router"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "kbd-router-cli"
path = "src/bin/cli.rs"

[[bin]]
name = "kbd-router-server"
path = "src/bin/server.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
pyo3 = { version = "0.23", features = ["extension-module"], optional = true }
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4", features = ["util"] }

[features]
default = []
python = ["dep:pyo3"]
